@@ -1,5 +1,6 @@
 == master
 
+* Add {preference}_changed?, {preference}_was, {preference}_changed, {preference}_will_change!, and reset_{preference}!
 * Add #preferences_changed?, #preferences_changed, and #preference_changes
 * Fix preferences that are reverted externally still getting stored
 * Fix preference definition types not being used to typecast values
